--- a/index.html
+++ b/index.html
@@ -603,14 +603,14 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Contact</h4>
                     <ul class="space-y-2">
-                        <li class="flex items-center text-gray-400"><i class="fas fa-map-marker-alt mr-3 text-green-400"></i> 123 Financial District, New York, NY</li>
-                        <li class="flex items-center text-gray-400"><i class="fas fa-phone-alt mr-3 text-green-400"></i> (555) 123-4567</li>
+                        <li class="flex items-center text-gray-400"><i class="fas fa-map-marker-alt mr-3 text-green-400"></i> 123 IOT Compus,Hawassa, NY</li>
+                        <li class="flex items-center text-gray-400"><i class="fas fa-phone-alt mr-3 text-green-400"></i> (251) 123-4567</li>
                         <li class="flex items-center text-gray-400"><i class="fas fa-envelope mr-3 text-green-400"></i> info@wealthwisebooks.com</li>
                     </ul>
                 </div>
             </div>
             <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-400 mb-4 md:mb-0">© 2023 WealthWise Books. All rights reserved.</p>
+                <p class="text-gray-400 mb-4 md:mb-0">© 2025 WealthWise Books. All rights reserved.</p>
                 <div class="flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white">Privacy Policy</a>
                     <a href="#" class="text-gray-400 hover:text-white">Terms of Service</a>
