--- a/index.html
+++ b/index.html
@@ -499,9 +499,9 @@
                     </div>
                     <p class="text-gray-600 mb-6">"The financial knowledge I gained from WealthWise Books completely transformed my approach to money. I've paid off $25,000 in debt and started investing!"</p>
                     <div class="flex items-center">
-                        <img src="https://randomuser.me/api/portraits/women/43.jpg" alt="Sarah J." class="w-12 h-12 rounded-full object-cover mr-4">
+                        <img src="#" alt="Solomon" class="w-12 h-12 rounded-full object-cover mr-4">
                         <div>
-                            <h4 class="font-bold text-gray-800">Sarah J.</h4>
+                            <h4 class="font-bold text-gray-800">Solomon</h4>
                             <p class="text-gray-500 text-sm">Financial Analyst</p>
                         </div>
                     </div>
@@ -518,9 +518,9 @@
                     </div>
                     <p class="text-gray-600 mb-6">"As an entrepreneur, the business and money books recommended here have been invaluable. My revenue increased by 40% after implementing strategies I learned."</p>
                     <div class="flex items-center">
-                        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Michael T." class="w-12 h-12 rounded-full object-cover mr-4">
+                        <img src="#" alt="Abenezer" class="w-12 h-12 rounded-full object-cover mr-4">
                         <div>
-                            <h4 class="font-bold text-gray-800">Michael T.</h4>
+                            <h4 class="font-bold text-gray-800">Abenezer</h4>
                             <p class="text-gray-500 text-sm">Small Business Owner</p>
                         </div>
                     </div>
@@ -537,9 +537,9 @@
                     </div>
                     <p class="text-gray-600 mb-6">"I wish I had found these books earlier in life. The personal finance section alone helped me save enough for a down payment on my first home."</p>
                     <div class="flex items-center">
-                        <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="Jennifer L." class="w-12 h-12 rounded-full object-cover mr-4">
+                        <img src="#" alt="MIkeyas" class="w-12 h-12 rounded-full object-cover mr-4">
                         <div>
-                            <h4 class="font-bold text-gray-800">Jennifer L.</h4>
+                            <h4 class="font-bold text-gray-800">Mikeyas.</h4>
                             <p class="text-gray-500 text-sm">Teacher</p>
                         </div>
                     </div>
