--- a/index.html
+++ b/index.html
@@ -499,9 +499,9 @@
                     </div>
                     <p class="text-gray-600 mb-6">"The financial knowledge I gained from WealthWise Books completely transformed my approach to money. I've paid off $25,000 in debt and started investing!"</p>
                     <div class="flex items-center">
-                        <img src="#" alt="Solomon" class="w-12 h-12 rounded-full object-cover mr-4">
+                        <img src="IMG/photo_2025-05-13_23-52-37.jpg" alt="Solomon" class="w-12 h-12 rounded-full object-cover mr-4">
                         <div>
-                            <h4 class="font-bold text-gray-800">Solomon</h4>
+                            <h4 class="font-bold text-gray-800">Gedion</h4>
                             <p class="text-gray-500 text-sm">Financial Analyst</p>
                         </div>
                     </div>
@@ -518,7 +518,7 @@
                     </div>
                     <p class="text-gray-600 mb-6">"As an entrepreneur, the business and money books recommended here have been invaluable. My revenue increased by 40% after implementing strategies I learned."</p>
                     <div class="flex items-center">
-                        <img src="#" alt="Abenezer" class="w-12 h-12 rounded-full object-cover mr-4">
+                        <img src="IMG/photo_2025-05-13_23-52-33.jpg" alt="Abenezer" class="w-12 h-12 rounded-full object-cover mr-4">
                         <div>
                             <h4 class="font-bold text-gray-800">Abenezer</h4>
                             <p class="text-gray-500 text-sm">Small Business Owner</p>
@@ -537,7 +537,7 @@
                     </div>
                     <p class="text-gray-600 mb-6">"I wish I had found these books earlier in life. The personal finance section alone helped me save enough for a down payment on my first home."</p>
                     <div class="flex items-center">
-                        <img src="#" alt="MIkeyas" class="w-12 h-12 rounded-full object-cover mr-4">
+                        <img src="IMG/photo_2025-05-13_23-51-13.jpg" alt="MIkeyas" class="w-12 h-12 rounded-full object-cover mr-4">
                         <div>
                             <h4 class="font-bold text-gray-800">Mikeyas.</h4>
                             <p class="text-gray-500 text-sm">Teacher</p>
