--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Contact</h4>
                     <ul class="space-y-2">
-                        <li class="flex items-center text-gray-400"><i class="fas fa-map-marker-alt mr-3 text-green-400"></i> 123 IOT Compus,Hawassa, NY</li>
+                        <li class="flex items-center text-gray-400"><i class="fas fa-map-marker-alt mr-3 text-green-400"></i> 123 IOT Compus,Hawassa, ETH</li>
                         <li class="flex items-center text-gray-400"><i class="fas fa-phone-alt mr-3 text-green-400"></i> (251) 123-4567</li>
                         <li class="flex items-center text-gray-400"><i class="fas fa-envelope mr-3 text-green-400"></i> info@wealthwisebooks.com</li>
                     </ul>
