--- a/about.html
+++ b/about.html
@@ -109,10 +109,10 @@
                         <div class="w-32 h-32 mx-auto mb-4 rounded-full bg-gray-200 overflow-hidden">
                             <i class="fas fa-user text-6xl text-gray-400 mt-6"></i>
                         </div>
-                        <h3 class="text-xl font-bold text-gray-800">Asfawesen Temtem</h3>
-                        <p class="text-green-600 font-medium mb-2">Backend Developer</p>
+                        <h3 class="text-xl font-bold text-gray-800">Bereket Mulugeta</h3>
+                        <p class="text-green-600 font-medium mb-2">Frontend Developer</p>
                         <p class="text-gray-600 text-sm">
-                            Handled all the cart logic. Doesn't sleep much.
+                            Handled all the cart logic. 
                         </p>
                     </div>
 
@@ -121,10 +121,10 @@
                         <div class="w-32 h-32 mx-auto mb-4 rounded-full bg-gray-200 overflow-hidden">
                             <i class="fas fa-user text-6xl text-gray-400 mt-6"></i>
                         </div>
-                        <h3 class="text-xl font-bold text-gray-800">Bereket Mulugeta </h3>
-                        <p class="text-green-600 font-medium mb-2">Content Creator</p>
+                        <h3 class="text-xl font-bold text-gray-800">Asfawesen Temtem</h3>
+                        <p class="text-green-600 font-medium mb-2">Designer</p>
                         <p class="text-gray-600 text-sm">
-                            Wrote all the book descriptions. Reads 2 books a week.
+                            Wrote all the book descriptions.
                         </p>
                     </div>
 
@@ -165,9 +165,9 @@
 
             <!-- Class Project Info -->
             <section class="bg-green-50 rounded-lg p-8 text-center">
-                <h2 class="text-2xl font-bold text-gray-800 mb-4">This is a Class Project</h2>
+                <h2 class="text-2xl font-bold text-gray-800 mb-4">This is a class Project</h2>
                 <p class="text-gray-600 mb-6 max-w-2xl mx-auto">
-                    WealthWise Books was created for our Web Development course at University. 
+                    WealthWise Books was created for our Web Development.
                     It's not a real business (yet!), but we're proud of what we've built!
                 </p>
                 <div class="inline-flex items-center bg-white px-4 py-2 rounded-full shadow-sm">
@@ -188,7 +188,7 @@
                 </div>
             </div>
             <p class="text-gray-400 text-sm">
-                &copy; 2023 WealthWise Books (Class Project). Not a real business.
+                &copy; 2025 WealthWise Books (Class Project). Not a real business.
             </p>
         </div>
     </footer>
