--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#" class="text-gray-700 hover:text-green-600 font-medium">Home</a>
                 <a href="categories.html" class="text-gray-700 hover:text-green-600 font-medium">Categories</a>
                 <a href="bestsellers.html" class="text-gray-700 hover:text-green-600 font-medium">Bestsellers</a>
-                <a href="newreleases.html" class="text-gray-700 hover:text-green-600 font-medium">New Releases</a>
+                <a href="new-releases.html" class="text-gray-700 hover:text-green-600 font-medium">New Releases</a>
                 <a href="about.html" class="text-gray-700 hover:text-green-600 font-medium">About</a>
             </nav>
             <div class="flex items-center space-x-4">
