--- a/bestsellers.html
+++ b/bestsellers.html
@@ -28,7 +28,7 @@
             </div>
             
             <div id="cartItems" class="space-y-4">
-                <!-- Cart items will be added here dynamically -->
+
                 <p class="text-gray-500 text-center py-8">Your cart is empty</p>
             </div>
             
@@ -147,7 +147,7 @@
                         </div>
                         <div class="mt-3 flex justify-between items-center">
                             <span class="text-lg font-bold text-green-600">$12.99</span>
-                            <button class="add-to-cart bg-green-600 hover:bg-green-700 text-white px-3 py-1 rounded-full text-sm" 
+                            <button class="add-to-cart bg-green-600 hover:bg-pink-700 text-pink px-3 py-1 rounded-full text-sm" 
                                     data-id="1" 
                                     data-title="Rich Dad Poor Dad" 
                                     data-price="12.99" 
