--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                 <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Invest in Your <span class="text-green-600"><br>Financial Future</span></h1>
                 <p class="text-lg text-gray-600 mb-8">Discover the best books on personal finance, investing, and wealth building from top financial experts.</p>
                 <div class="flex space-x-4">
-                    <button class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg font-medium transition duration-300 transform hover:scale-105">
-                        Browse Books <i class="fas fa-arrow-right ml-2"></i>
+                   <a href="new-releases.html"> <button class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg font-medium transition duration-300 transform hover:scale-105">
+                        Browse Books <i class="fas fa-arrow-right ml-2"></i></button></a>
                     </button>
-                    <button class="border-2 border-green-600 text-green-600 hover:bg-green-50 px-6 py-3 rounded-lg font-medium transition duration-300">
+                   <a href="about.html"><button class="border-2 border-green-600 text-green-600 hover:bg-green-50 px-6 py-3 rounded-lg font-medium transition duration-300">
                         Learn More
-                    </button>
+                    </button></a>
                 </div>
             </div>
             <div class="md:w-1/2 flex justify-center">
