--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WealthWise Books - Your Financial Knowledge Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="icon" href="ChatGPT Image May 25, 2025, 10_45_37 PM.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
