--- a/new-releases.html
+++ b/new-releases.html
@@ -6,6 +6,7 @@
     <title>WealthWise Books</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="CSS/new-releases.css">
+        <link rel="icon" href="ChatGPT Image May 25, 2025, 10_45_37 PM.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="font-sans bg-gray-50">
